--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -1,63 +1,65 @@
-/* ===================================
-========= register page  */
+/* Register Page Styles */
 .form-container {
-    margin-top: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 70vh;
-    flex-direction: column;
-    background-color: #ffdee9;
-    background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 70vh;
+  flex-direction: column;
+  background-color: #222; /* Dark background color */
+  background-image: linear-gradient(45deg, #000, #333); /* Gradient background */
+  animation: backgroundAnimation 20s ease infinite alternate; /* Background animation */
+}
+
+@keyframes backgroundAnimation {
+  0% {
+    background-position: 0% 50%;
   }
-  
-  .form-container form {
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding: 20px;
-    background-color: #fff;
+  100% {
+    background-position: 100% 50%;
   }
-  
-  .form-container form .title {
-    text-align: center;
-    margin-bottom: 15px;
-    font-weight: bold;
-    font-family: "Playfair Display", serif;
-  }
-  
-  .form-container form input {
-    border: none;
-    border-bottom: 1px solid #000;
-    border-radius: 0;
-  }
-  
-  .form-container form button {
-    border: 1px solid black;
-    border-radius: 0;
-    background-color: #000;
-    color: white;
-    width: 250px;
-  }
-  
-  .form-container form button:hover {
-    border: 1px solid black;
-    background: #000000; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #434343,
-      #000000
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #434343,
-      #000000
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-  
-  .forgot-btn {
-    background-color: #434343a4 !important;
-    border: 0 !important;
-  }
-  
-  .forgot-btn:hover {
-    color: white !important;
-  }
+}
+
+.form-container form {
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 5px 15px;
+  padding: 20px;
+  background-color: #333; /* Dark background color for form */
+}
+
+.form-container form .title {
+  text-align: center;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+  color: #fff; /* White text color */
+}
+
+.form-container form input {
+  border: none;
+  border-bottom: 1px solid #fff; /* White bottom border */
+  border-radius: 0;
+  color: #fff; /* White text color */
+}
+
+.form-container form button {
+  border: 1px solid #fff; /* White border */
+  border-radius: 0;
+  background-color: #000;
+  color: #fff; /* White text color */
+  width: 250px;
+}
+
+.form-container form button:hover {
+  background: #000; /* Dark background color on hover */
+  background: -webkit-linear-gradient(to right, #434343, #000); /* Chrome, Safari */
+  background: linear-gradient(to right, #434343, #000); /* Standard syntax */
+}
+
+.forgot-btn {
+  background-color: #434343a4 !important;
+  border: 0 !important;
+}
+
+.forgot-btn:hover {
+  color: white !important;
+}
