--- a/client/src/styles/ProductDetailsStyles.css
+++ b/client/src/styles/ProductDetailsStyles.css
@@ -1,50 +1,53 @@
+/* ProductDetailsStyles.css */
+
 .product-details {
-  margin-top: 100px !important;
+  margin-top: 20px;
 }
 
 .product-details-info {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
+  padding: 20px;
 }
 
-.product-details-info h6 {
-  margin-bottom: 20px !important;
+.similar-products {
+  margin-top: 40px;
 }
 
-.similar-products .card {
-  background-color: rgba(128, 128, 128, 0.097);
-  width: 18rem;
+.card {
+  width: 250px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
 }
 
-.similar-products .card-name-price {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.card:hover {
+  transform: translateY(-5px);
 }
 
-.similar-products .card-price {
-  color: green;
-  font-weight: bold;
-}
-.similar-products button {
-  border-radius: 0;
-  width: 100%;
+.card-img-top {
+  height: 200px;
+  object-fit: cover;
   border-top-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-size: 14px;
-  font-weight: bold;
+  border-top-right-radius: 5px;
 }
 
-.similar-products .card-text {
-  color: rgb(90, 89, 89);
+.card-body {
+  padding: 20px;
 }
 
-.similar-products .card img:hover {
-  transform: scale(0.9);
+.card-name-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.similar-products .card-img-top {
-  height: 300px !important;
+.btn {
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.btn:hover {
+  background-color: #212529;
+  color: #fff;
+  transform: scale(1.05);
 }
