--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -310,3 +310,52 @@
 }
 
 /* Additional styling can be added based on your design requirements */
+.filter-header {
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+}
+
+.filter-header svg {
+  margin-left: 5px;
+}
+
+.filter-section {
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .filter-header {
+    font-size: 14px;
+  }
+}
+
+
+
+.filter-section {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.filter-button {
+  padding: 8px 16px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  display: none; /* Initially hide the buttons */
+  align-items: center;
+}
+
+.filter-button:hover {
+  cursor: pointer;
+  background-color: #f0f0f0;
+}
+
+@media screen and (max-width: 768px) {
+  .filter-button {
+    display: flex; /* Show the buttons on smaller screens */
+  }
+}
