--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,9 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "EB Garamond", serif;
+
+  /* font-family: "Poppins", sans-serif; */
 }
 
 /* Navbar Styles */
