--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -30,10 +30,10 @@
 /* Product Cards */
 .home-page .card {
   background-color: rgba(128, 128, 128, 0.097);
-  width: 300px;
-  margin: 20px;
+  width: 260px;
+  margin: 10px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
 }
 
@@ -42,14 +42,15 @@
 }
 
 .home-page .card-img-top {
-  height: 200px;
+  height: 150px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   object-fit: cover;
 }
 
 .home-page .card-body {
-  padding: 15px;
+  padding: 0px;
+  max-height: fit-content;
 }
 
 .home-page .card-name-price {
@@ -378,10 +379,5 @@
 .dark-mode .navbar {
   background-color: #1a1a1a; /* Dark navigation background color */
 }
-
-
-
-
-
 
 
